# prompt-lib

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  clean-up-lovable  in-react-project-prompt-rules  pyproject.toml  react-addons-prompt  react-init-prompt  readme-reference  run  run-web-ui  run-web-ui.cmd  run.cmd
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: adr.md  dotnet-class.md  dotnet-test.md  plan.md  prompt-injection-guard.md  review-conflicts.md
.claude/hooks/: command_guard.py  session-start.ps1
.claude/skills/: commit.md  xlsx.md
.githooks/: pre-commit
.github/workflows/: pylint.yml  release.yml
.mcp/: logs.json
.obsidian/: workspace.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: agents.md  constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.todo/: tasklist.md
docs/: README.md  agents.md  architecture.md  context-guard.md  gh-accounts.md  git-policy.md  hooks.md  infographic-v1.html  infographic.html  learning.md  master-flowchart.drawio  master-flowchart.md  orchestration.md  parallel-isolation.md  plugin-install.md  release-readiness.md  release-runbook.md  rules-output-styles.md  services.md  settings.md  skills.md  speckit.md  workflows.md
docs/adr/: 0001-parallel-subagent-isolation-via-git-worktrees.md  0002-process-cleanup-hook-session-boundaries-not-scheduled-task.md
docs/analysis/: loop-engineering-comparison.html  openhands-repo-analysis.html
docs/okf/: README.md
docs/ops/: Home.md  Inbox.md  Planning Board.canvas
global/: .mcp.json  CLAUDE.md  DESIGN.md  MCP.md  README.md  architect.md  context-guard-policy.json  keybindings.json  settings.json  statusline-segments.json  statusline.py
global/.claude-plugin/: plugin.json
global/agents/: api-designer.md  code-cleaner.md  code-plan-verifier.md  data-analyst.md  db-architect.md  devops-engineer.md  dotnet-architect.md  dotnet-tester.md  frontend-architect.md  frontend-css.md  frontend-designer.md  frontend-tester.md  git-repo-analyst.md  github-config-manager.md  gitignore-auditor.md  init-project.md  load-project.md  owasp-security-reviewer.md  pi-arduino-architect.md  python-architect.md  python-tester.md  react-architect.md  requirements-analyst.md  secret-auditor.md  solution-architect.md  tanstack-architect.md  unity-architect.md  ux-analyst.md  website-content-analyst.md
global/codex/: README.md  conversion-manifest.json  statusline-segments.json
global/git/: git-policy.default.json
global/hooks/: _gate.py  check_claude_update.py  claude-process-check.ps1  command_guard.py  context_guard.py  file_write_guard.py  format_on_write.py  hooks.json  post_tool_use.py  pretool_branch_guard.py  pretool_task_isolation.py  process_cleanup.py  session-start.ps1  session_end.py  session_end_release_lock.py  session_start.py  stop-session.ps1  stop_session.py  subagent_start.py  subagent_stop.py  write_audit.py
global/opencode/: README.md  opencode.json  tui.json
global/output-styles/: architect.md  review.md
global/project-templates/: dotnet.md  frontend.md  (+4 more)
scripts/: test-all.py
services/a2a-bridge/: README.md  pyproject.toml
services/a2a-bridge/src/a2a_bridge/: cli.py
services/a2a-bridge/src/a2a_bridge/adapters/: base.py
services/a2a-bridge/src/a2a_bridge/adapters/claude/: runner.py  server.py
services/a2a-bridge/src/a2a_bridge/adapters/codex/: runner.py  server.py
services/a2a-bridge/src/a2a_bridge/adapters/gemini/: runner.py  server.py
services/a2a-bridge/src/a2a_bridge/client/: delegation.py
services/a2a-bridge/src/a2a_bridge/protocol/: agent-card.schema.json  agent_card.py  auth.py  cli_runner.py  jsonrpc.py  logging.py  sse.py  tasks.py
services/a2a-bridge/tests/contract/: test_agent_card_schema.py  test_auth_middleware.py  test_error_codes.py  test_jsonrpc_envelope.py  test_jsonrpc_methods_cancel.py  test_jsonrpc_methods_get.py  test_jsonrpc_methods_send_subscribe.py  test_sse_event_ordering.py  test_structured_logger.py
services/a2a-bridge/tests/fixtures/: fake_cli.py
services/a2a-bridge/tests/integration/: test_concurrency.py  test_p1_outbound_delegation.py  test_p2_inbound_curl.py  test_p3_agent_card_discovery.py
services/a2a-bridge/tests/unit/: test_bearer_token_compare.py  test_claude_runner.py  test_codex_runner.py  test_task_state_machine.py
services/mcp-bus/: README.md  pyproject.toml
services/mcp-bus/src/mcp_bus/: __main__.py  paths.py  server.py  storage.py
services/mcp-bus/tests/: conftest.py
services/mcp-bus/tests/contract/: test_tool_shapes.py
services/mcp-bus/tests/unit/: test_concurrency.py  test_storage.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/orchestrator/: cli.py  config.py  daemon.py  eventlog.py  notifier.py  worktree.py
services/orchestrator/src/orchestrator/agents/: issue_triage.py  pr_review.py
services/orchestrator/src/orchestrator/dashboard/: __init__.py  app.py
services/orchestrator/src/orchestrator/triggers/: base.py  github_issues_poll.py  github_poll.py
services/orchestrator/tests/: conftest.py
services/orchestrator/tests/contract/: test_a2a_delegation_consumer.py  test_gh_issue_list_schema.py  test_gh_pr_list_schema.py  test_ntfy_publish_request.py
services/orchestrator/tests/integration/: test_p1_pr_review_end_to_end.py  test_p2_dashboard_tail.py  test_p3_phone_notification.py  test_p4_replayable_history.py  test_p5_issue_triage_end_to_end.py
services/orchestrator/tests/unit/: test_cli.py  test_config.py  test_eventlog.py  test_github_issues_poll.py  test_github_poll.py  test_github_poll_notifier.py  test_issue_triage.py  test_notifier.py  test_orphan_recovery.py  test_pr_review.py  test_trigger_base.py  test_worktree.py
setup/: README.md  apply.cmd  apply.py  mcp-templates.json  settings-configurator-ui.cmd  settings-configurator-ui.py  settings-configurator-ui.sh
tests/: conftest.py
(+928 files in other folders)
