[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cabal"
version = "0.1.0"
description = "Claude Code Setup Wizard — deploy skills, agents, hooks, MCP servers, and project scaffolding from one TUI."
readme = "setup/src/cabal/README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dawid" }]
keywords = ["claude-code", "agentic", "wizard", "setup", "textual", "mcp"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console :: Curses",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "textual>=0.50",
  "rich>=13",
]

[project.urls]
Homepage = "https://github.com/dwcy/prompt-lib"
Repository = "https://github.com/dwcy/prompt-lib"
Issues = "https://github.com/dwcy/prompt-lib/issues"

[project.scripts]
cabal = "cabal.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["setup/src/cabal"]

[tool.hatch.build.targets.wheel.force-include]
"global" = "cabal/_data/global"
"setup/env" = "cabal/_data/setup/env"
"setup/mcp-templates.json" = "cabal/_data/setup/mcp-templates.json"

[tool.hatch.build.targets.sdist]
include = [
  "setup/src/cabal",
  "global",
  "setup/env",
  "setup/mcp-templates.json",
  "LICENSE",
  "setup/src/cabal/README.md",
]
