[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cabal"
version = "0.1.0"
description = "Claude Code Setup Wizard — deploy skills, agents, hooks, MCP servers, and project scaffolding from one TUI."
readme = "setup/src/cabal/README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dawid" }]
keywords = ["claude-code", "agentic", "wizard", "setup", "textual", "mcp"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console :: Curses",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "textual>=0.50",
  "rich>=13",
]

[project.urls]
Homepage = "https://github.com/dwcy/prompt-lib"
Repository = "https://github.com/dwcy/prompt-lib"
Issues = "https://github.com/dwcy/prompt-lib/issues"

[project.scripts]
cabal = "cabal.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["setup/src/cabal"]

[tool.hatch.build.targets.wheel.force-include]
"global" = "cabal/_data/global"
"setup/env" = "cabal/_data/setup/env"
"setup/mcp-templates.json" = "cabal/_data/setup/mcp-templates.json"

[tool.hatch.build.targets.sdist]
include = [
  "setup/src/cabal",
  "global",
  "setup/env",
  "setup/mcp-templates.json",
  "LICENSE",
  "setup/src/cabal/README.md",
]

[tool.pytest.ini_options]
testpaths = ["setup/tests", "global/hooks/tests"]
asyncio_mode = "strict"
filterwarnings = [
  "ignore::DeprecationWarning:textual",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "services/*/.venv",
  "**/__pycache__",
  "build",
  "setup/build",
]

[tool.ruff.lint]
# Bug-catchers only — no style churn.
# F  = pyflakes (F821 undefined names, F401 unused imports, F811 redefined, etc.)
# E9 = syntax errors
# B  = flake8-bugbear (likely-bug patterns)
select = ["F", "E9", "B"]
ignore = [
  "F401",  # unused imports — common in re-export modules like cabal/app.py
  "F841",  # unused locals — common in views during incremental edits
  "B008",  # function call in default arg — fine for FastAPI/Textual patterns
]

[tool.ruff.lint.per-file-ignores]
"setup/tests/**" = ["F811"]
"global/hooks/**" = ["F841"]
