[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cabal"
version = "0.1.0"
description = "Local agent control panel for Claude Code and Codex — deploy skills, agents, hooks, MCP servers, Codex assets, and project scaffolding from one TUI."
readme = "setup/src/cabal/README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dawid" }]
keywords = ["claude-code", "codex", "agentic", "control-panel", "setup", "textual", "mcp"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console :: Curses",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "textual>=0.50,<7",
  "rich>=13,<15",
]

[project.urls]
Homepage = "https://github.com/dwcy/prompt-lib"
Repository = "https://github.com/dwcy/prompt-lib"
Issues = "https://github.com/dwcy/prompt-lib/issues"

[project.scripts]
cabal = "cabal.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["setup/src/cabal"]

[tool.hatch.build.targets.wheel.force-include]
"global" = "cabal/_data/global"
"setup/src/cabal/assets" = "cabal/assets"
"setup/env" = "cabal/_data/setup/env"
"setup/mcp-templates.json" = "cabal/_data/setup/mcp-templates.json"

[tool.hatch.build.targets.sdist]
include = [
  "setup/src/cabal",
  "global",
  "setup/env",
  "setup/mcp-templates.json",
  "LICENSE",
  "setup/src/cabal/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests", "setup/tests", "global/hooks/tests"]
filterwarnings = [
  "ignore::DeprecationWarning:textual",
]
