[project]
name = "mcp-bus"
version = "0.1.0"
description = "Local MCP server exposing an inter-agent message bus, namespaced shared memory, and an agent registry over stdio. Durable in SQLite, no HTTP, no auth (localhost only)."
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
mcp-bus = "mcp_bus.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bus"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
