[project]
name = "orchestrator"
version = "0.1.0"
description = "Agent orchestration daemon with GitHub PR review trigger and live console dashboard. v1 of specs/002-agent-orchestrator/."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "textual>=0.80",
    "rich>=13",
    "a2a-bridge",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
orchestrator = "orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.uv.sources]
a2a-bridge = { path = "../a2a-bridge", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires INTEGRATION=1",
]
